--- a/reference.bib
+++ b/reference.bib
@@ -217,7 +217,7 @@
 	url = {http://icalepcs.synchrotron.org.au/papers/wepgf119.pdf},
 	urldate = {2016-09-23},
 	booktitle = {Proc. of {ICALEPCS}},
-	author = {Bai, J. and others},
+	author = {Bai, J. and Ferrand, T. and Beck, D. and Bär, R. and Kester, O. and Ondreka, D. and Prados, C. and Terpstra, W.},
 	year = {2015},
 	file = {[PDF] synchrotron.org.au:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\G38R62RF\\Bai et al. - 2015 - BUNCH TO BUCKET TRANSFER SYSTEM FOR FAIR.pdf:application/pdf}
 }
@@ -752,7 +752,7 @@
 
 @misc{prados_white_2011,
 	title = {White {Rabbit} and {Robustness}},
-	url = {file:///C:/Users/Gilgil/Downloads/WhiteRabbitAndRobustness.pdf},
+	url = {http://www.ohwr.org/documents/103},
 	publisher = {GSI Internal Document},
 	author = {Prados, C. and Lipinski, M.},
 	year = {2011}
