--- a/publication.bib
+++ b/publication.bib
@@ -5,8 +5,8 @@
 	url = {http://icalepcs.synchrotron.org.au/papers/wepgf119.pdf},
 	urldate = {2016-09-23},
 	booktitle = {Proc. of {ICALEPCS}},
-	author = {Bai, J. and Ferrand, T. and Beck, D. and Bär, R. and Kester, O. and Ondreka, D. and Prados, C. and Terpstra, W.},
-	year = {2015},
+	author = {Bai, J. and Ferrand, T. and Beck, D. and B\"ar, R. and Kester, O. and Ondreka, D. and Prados, C. and Terpstra, W.},
+	year = {2015.},
 	file = {[PDF] synchrotron.org.au:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\G38R62RF\\Bai et al. - 2015 - BUNCH TO BUCKET TRANSFER SYSTEM FOR FAIR.pdf:application/pdf}
 }
 
@@ -16,7 +16,7 @@
 	urldate = {2016-09-23},
 	journal = {GSI Scientific Report},
 	author = {Ferrand, T. and Bai, J.},
-	year = {2014},
+	year = {2014.},
 	file = {[PDF] gsi.de:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\8FJRG2F2\\Ferrand and Bai - System Simulation of Bunch-to-Bucket Transfer Betw.pdf:application/pdf}
 }
 
@@ -26,8 +26,8 @@
 	url = {http://accelconf.web.cern.ch/AccelConf/PCaPAC2014/papers/fpo024.pdf},
 	urldate = {2016-09-23},
 	booktitle = {Proc. of {PCaPAC}},
-	author = {Bai, J. and Beck, D. and Bär, R. and Ondreka, D. and Ferrand, T. and Kreider, M. and Prados, C. and Rauch, S. and Terpstra, W. and Zweig, M.},
-	year = {2014},
+	author = {Bai, J. and Beck, D. and B\"ar, R. and Ondreka, D. and Ferrand, T. and Kreider, M. and Prados, C. and Rauch, S. and Terpstra, W. and Zweig, M.},
+	year = {2014.},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\GTG7PPUU\\Bai et al. - FIRST IDEA ON BUNCH TO BUCKET TRANSFER FOR FAIR.pdf:application/pdf}
 }
 
@@ -39,7 +39,7 @@
 	urldate = {2016-09-23},
 	journal = {Chinese physics C},
 	author = {Bai, J. and Zeng, L. and Wang, B. and Li, P. and Li, F. and Xu, T. and Li, Z.},
-	year = {2013},
+	year = {2013.},
 	pages = {107004},
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\IEB9A7XZ\\meta.html:text/html}
 }
@@ -52,7 +52,7 @@
 	urldate = {2016-09-23},
 	booktitle = {Proc. of {LINAC}},
 	author = {Bai, J. and Xiao, S. and Xu, T. and Zeng, L.},
-	year = {2012},
+	year = {2012.},
 	file = {Full Text PDF:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\QX45773N\\Bai et al. - 2013 - The Development of Timing Control System for RFQ.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\GIPXJ9UC\\1364282.html:text/html}
 }
 
@@ -63,7 +63,7 @@
 	urldate = {2016-09-23},
 	booktitle = {Proc. of {IPAC}},
 	author = {Ferrand, T. and Bai, J.},
-	year = {2015},
+	year = {2015.},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\S9IEJPXC\\Ferrand and Bai - SYSTEM DESIGN FOR A DETERMINISTIC BUNCH-TO-BUCKET .pdf:application/pdf}
 }
 
@@ -73,8 +73,8 @@
 	url = {http://accelconf.web.cern.ch/AccelConf/PCaPAC2014/papers/tco304.pdf},
 	urldate = {2016-09-23},
 	booktitle = {Proc. of {PCaPAC}},
-	author = {Kreider, M. and Bai, J. and Bär, R. and Beck, D. and Hahn, A. and Prados, C. and Rauch, S. and Terpstra, W. W. and Zweig, M.},
-	year = {2014},
+	author = {Kreider, M. and Bai, J. and B\"ar, R. and Beck, D. and Hahn, A. and Prados, C. and Rauch, S. and Terpstra, W. W. and Zweig, M.},
+	year = {2014.},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\BFVZIJJD\\Kreider et al. - 2014 - Launching the FAIR timing system with CRYRING.pdf:application/pdf}
 }
 
@@ -83,8 +83,8 @@
 	url = {https://www-acc.gsi.de/wiki/pub/Timing/TimingSystemDocuments/CSCOTG_SciRep2013.pdf},
 	urldate = {2016-09-23},
 	journal = {GSI Scientific Report},
-	author = {Beck, D. and Adamczewski-Musch, J. and Bai, J. and Bär, R. and Frühauf, J. and Hoffmann, J. and Kreider, M. and Kurz, N. and Prados, C. and Rauch, S. and Voltz, S. and Zweig, M.},
-	year = {2013},
+	author = {Beck, D. and Adamczewski-Musch, J. and Bai, J. and B\"ar, R. and Frühauf, J. and Hoffmann, J. and Kreider, M. and Kurz, N. and Prados, C. and Rauch, S. and Voltz, S. and Zweig, M.},
+	year = {2013.},
 	file = {[PDF] gsi.de:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\UZMXUB34\\Beck et al. - Paving the Way for the General Machine Timing Syst.pdf:application/pdf}
 }
 
@@ -96,6 +96,6 @@
 	urldate = {2016-09-23},
 	journal = {GSI Internal Document},
 	author = {Kreider, M. and Bai, J. and Beck, D. and Prados, C. and Terpstra, W. and Rauch, S. and Zweig, M.},
-	year = {2014},
+	year = {2014.},
 	file = {GMT_TR_Description-v3.2 - GMT_TR_Description-v3.2.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\6NCJ78U6\\GMT_TR_Description-v3.2.html:text/html}
 }
